tests/fixtures/invalid/int_in_bool.py
# Cannot use 'in' with Int and Bool
x: bool = 1 in True
